--- a/front/app.css
+++ b/front/app.css
@@ -2,9 +2,9 @@ html {
   height: 100%;
 }
 body {
-	background-color: #ccc;
+	background-color: #fff;
 	margin: 0;
-	height: 100%;
+	min-height: 100%;
 }
 body,
 input {
